--- a/_posts/2020-10-06-WXXi.html
+++ b/_posts/2020-10-06-WXXi.html
@@ -15,47 +15,46 @@ slug: WXXi
 <p style="padding-right: 40px; text-align: justify;">نخستین مقابله روشن برابرِ اندیشه&zwnj;ای که زیبایی معماری را وابسته به &laquo;طبیعت&raquo; می&zwnj;دانست، در سده هفدهم و از سوی کلاود پراو -نظریه&zwnj;پرداز و معمار فرانسوی- صورت گرفت. انکار صلاحیت طبیعت از سوی پراو [اقدامی] افراطی و چشم&zwnj;گیر بود و پس از دو سده، نخستین حرکتِ اساسی را در مسیر بازاندیشی رابطه معماری و طبیعت شکل داد.[۱۳]</p>
 <p style="padding-right: 40px; text-align: justify;">&nbsp;&laquo;کاربر&raquo; از جمله آخرین مفاهیمی بود که در مکتوبات معماری مدرن ظاهر شد. این مفهوم که حدوداً تا پیش از ۱۹۵۰ ناشناخته بود، در اواخر این دهه و در دهه ۱۹۶۰ رایج شد، در دهه ۱۹۸۰ از جلا افتاد و در دهه ۱۹۹۰ به منظوری متفاوت با گذشته، رونقی دوباره در دوره مدرن یافت. ریشه [تاریخی] این مفهوم به زمان معرفی برنامه&zwnj;های دولت رفاه در اروپای غربیِ پس از ۱۹۴۵ می&zwnj;رسد و نخستین مرتبه از اعتبار آن را نیز باید در ارتباط با همین [رویداد تاریخی] بررسی کرد.[۱۴]</p>
 <p style="text-align: justify;">&nbsp;علی&zwnj;رغم تلاش روشنی که فورتی برای ایضاح تاریخی واژگان معماری مدرن می&zwnj;کند، باید توجه کنیم که او این فرض مهم را نیز مطرح کرده که &laquo;تعریف یکپارچه&zwnj;ای از این واژه&zwnj;ها در دوره مدرن وجود ندارد و طی دو سده گذشته، گروههای مختلف فکری و معماران گوناگون، آنها را در معناهای گوناگون به کار برده&zwnj;اند&raquo;. اما یکی از مهم&zwnj;ترین - و شاید نادیده&zwnj;ترین- ویژگی&zwnj;ها کار فورتی در همینجا شکل می&zwnj;گیرد. گرچه او پیش از نشان دادن این تیزبینی نیز مشخص کرده بود که معماری را پدیده&zwnj;ای عمیقاً اجتماعی می&zwnj;داند، اما تأکید او بر عدم ثبات معناهای معماری و وابستگی آنها به کاربرد تاریخی و اجتماعی زبان - که در بخش دوم کتاب مشخصاً به ظهور می&zwnj;رسد - صورتی دیگر از اجتماعی بودن معماری نزد او را نمایان می&zwnj;کند. او که این عدم ثبات معنا را طی یک بررسی دقیق تاریخی به دقت نشان داده، در بخش دوم کتاب مشخص می&zwnj;کند که علاوه بر &laquo;معماری به مثابه عمل معمارانه&raquo; (که&nbsp; به گمان او وابسته به کلمات معماری و تاریخ آنهاست)، &laquo;معماری به مثابه گفتمان&raquo; را نیز به رسمیت می&zwnj;شناسد و وجه گفتمانی معماری را نیز در بررسی اجتماعی در نظر می&zwnj;گیرد. در واقع گزارش تاریخی&zwnj;ای که او از واژه&zwnj;ها و مفاهیم معماری مدرن عرضه می&zwnj;کند، خوانندگان کتاب را در ترسیم خطوط گفتمانی معماری مدرن یاری می&zwnj;کند و به آنها نشان می&zwnj;دهد که متن&zwnj;ها و مفاهیم معماری (در عین اجتماعی و تاریخی بودن)، خود نیز در مرزهای نسبتاً مشخص یک گفتمان جای می&zwnj;گیرند. بنا بر این معماری&zwnj;ای که نزد آدریان فورتی یافت می&zwnj;شود، پدیده&zwnj;ای مشخصاً اجتماعی و متأثر از روابط پیچیده جامعه است؛ اما در عین حال، طی چند سده چنان ظهور متن&zwnj;محوری در فضاهای متعلق به خود داشته، که باید بپذیریم اکنون بررسیِ خود این پدیده در میان معماران و پژوهشگران معماری کاملاً ضروری است.</p>
-<p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify; padding-right: 40px;"><span style="font-size: 10pt;">پی&zwnj;نوشت:</span></p>
-<p style="text-align: justify; padding-right: 40px;"><span style="font-size: 10pt;">&nbsp;1. Adrian Forty (1948 - )</span></p>
+<p><strong>پی&zwnj;نوشت:</strong></p>
+<p dir="ltr">&nbsp;1. Adrian Forty (1948 - )</p>
 </div>
 </div>
-<div style="text-align: justify; padding-right: 40px;">
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">تاریخ&zwnj;نگار معماری و استاد بازنشسته تاریخ معماری در مدرسه معماریِ بارتلت، دانشگاه لندن</span></p>
+<div>
+<p>تاریخ&zwnj;نگار معماری و استاد بازنشسته تاریخ معماری در مدرسه معماریِ بارتلت، دانشگاه لندن</p>
 </div>
-<div style="text-align: justify; padding-right: 40px;"><span style="font-size: 10pt;">2. Lobby</span></div>
-<div style="text-align: justify; padding-right: 40px;">
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">نشریه معماری مدرسه بارتلت، دانشگاه لندن</span></p>
+<div dir="ltr">2. Lobby</div>
+<div>
+<p>نشریه معماری مدرسه بارتلت، دانشگاه لندن</p>
 </div>
-<div style="text-align: justify; padding-right: 40px;"><span style="font-size: 10pt;">3. Roland Barthes (1915 - 1980)</span></div>
-<div style="text-align: justify; padding-right: 40px;"><span style="font-size: 10pt;">4. Forty, Adrian. Words and Buildings: A Vocabulary of Modern Architecture. New York: Thames &amp; Hudson, 2004.</span></div>
-<div style="text-align: justify; padding-right: 40px;"><span style="font-size: 10pt;">5. Language of Modernism</span></div>
-<div style="text-align: justify; padding-right: 40px;"><span style="font-size: 10pt;">6. Form, Space, Design, Order and Structure</span></div>
-<div style="text-align: justify; padding-right: 40px;"><span style="font-size: 10pt;">7. Language and Drawing</span></div>
-<div style="text-align: justify; padding-right: 40px;"><span style="font-size: 10pt;">8. Ferdinand de Saussure (1857 - 1913)</span></div>
-<div style="text-align: justify; padding-right: 40px;"><span style="font-size: 10pt;">9. On Difference: Masculine and Feminine</span></div>
-<div style="text-align: justify; padding-right: 40px;"><span style="font-size: 10pt;">10. Language Metaphors</span></div>
-<div style="text-align: justify; padding-right: 40px;"><span style="font-size: 10pt;">۱۱. این مدخل&zwnj;ها به ترتیب عبارتند از:</span></div>
-<div style="text-align: justify; padding-right: 40px;">
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">&nbsp;الف. سرشت&nbsp;&nbsp;&nbsp; &nbsp;character</span></p>
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">ب. سیاق&nbsp;&nbsp;&nbsp;&nbsp; context</span></p>
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">ج. طراحی&nbsp;&nbsp;&nbsp;&nbsp; design</span></p>
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">د. انعطاف&nbsp;&nbsp;&nbsp;&nbsp; flexibility</span></p>
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">ه. صورت&nbsp;&nbsp;&nbsp;&nbsp; form</span></p>
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">و. صورت&zwnj;مدارانه&nbsp;&nbsp;&nbsp;&nbsp; formal</span></p>
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">ز. کاربری&nbsp;&nbsp;&nbsp;&nbsp; function</span></p>
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">ح. تاریخ&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; history</span></p>
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">ط. حافظه&nbsp;&nbsp;&nbsp;&nbsp; memory</span></p>
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">ی. طبیعت&nbsp;&nbsp;&nbsp;&nbsp; nature</span></p>
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">ک. نظم&nbsp;&nbsp;&nbsp;&nbsp; order</span></p>
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">ل. بسیط&nbsp;&nbsp;&nbsp;&nbsp; simple</span></p>
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">م. فضا&nbsp;&nbsp;&nbsp;&nbsp; space</span></p>
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">ن. ساختار&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; structure</span></p>
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">س. شفافیت&nbsp;&nbsp;&nbsp;&nbsp; transparency</span></p>
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">ع. راستی&nbsp;&nbsp;&nbsp;&nbsp; truth</span></p>
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">ف. نوع&nbsp;&nbsp;&nbsp;&nbsp; type</span></p>
-<p style="padding-right: 40px;"><span style="font-size: 10pt;">ص. کاربر&nbsp;&nbsp;&nbsp;&nbsp; user</span></p>
+<div dir="ltr">3. Roland Barthes (1915 - 1980)</div>
+<div dir="ltr">4. Forty, Adrian. Words and Buildings: A Vocabulary of Modern Architecture. New York: Thames &amp; Hudson, 2004.</div>
+<div dir="ltr">5. Language of Modernism</div>
+<div dir="ltr">6. Form, Space, Design, Order and Structure</div>
+<div dir="ltr">7. Language and Drawing</div>
+<div dir="ltr">8. Ferdinand de Saussure (1857 - 1913)</div>
+<div dir="ltr">9. On Difference: Masculine and Feminine</div>
+<div dir="ltr">10. Language Metaphors</div>
+<div>۱۱. این مدخل&zwnj;ها به ترتیب عبارتند از:</div>
+<div>
+<p>&nbsp;الف. سرشت&nbsp;&nbsp;&nbsp; &nbsp;character</p>
+<p>ب. سیاق&nbsp;&nbsp;&nbsp;&nbsp; context</p>
+<p>ج. طراحی&nbsp;&nbsp;&nbsp;&nbsp; design</p>
+<p>د. انعطاف&nbsp;&nbsp;&nbsp;&nbsp; flexibility</p>
+<p>ه. صورت&nbsp;&nbsp;&nbsp;&nbsp; form</p>
+<p>و. صورت&zwnj;مدارانه&nbsp;&nbsp;&nbsp;&nbsp; formal</p>
+<p>ز. کاربری&nbsp;&nbsp;&nbsp;&nbsp; function</p>
+<p>ح. تاریخ&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; history</p>
+<p>ط. حافظه&nbsp;&nbsp;&nbsp;&nbsp; memory</p>
+<p>ی. طبیعت&nbsp;&nbsp;&nbsp;&nbsp; nature</p>
+<p>ک. نظم&nbsp;&nbsp;&nbsp;&nbsp; order</p>
+<p>ل. بسیط&nbsp;&nbsp;&nbsp;&nbsp; simple</p>
+<p>م. فضا&nbsp;&nbsp;&nbsp;&nbsp; space</p>
+<p>ن. ساختار&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; structure</p>
+<p>س. شفافیت&nbsp;&nbsp;&nbsp;&nbsp; transparency</p>
+<p>ع. راستی&nbsp;&nbsp;&nbsp;&nbsp; truth</p>
+<p>ف. نوع&nbsp;&nbsp;&nbsp;&nbsp; type</p>
+<p>ص. کاربر&nbsp;&nbsp;&nbsp;&nbsp; user</p>
 </div>
-<div style="padding-right: 40px;"><span style="font-size: 10pt;">12. Forty, Words and Buildings, 286.</span></div>
-<div style="padding-right: 40px;"><span style="font-size: 10pt;">13. Forty, Words and Buildings, 221.</span></div>
-<div style="text-align: justify; padding-right: 40px;"><span style="font-size: 10pt;">14. Forty, Words and Buildings, 312.</span></div>
+<div dir="ltr">12. Forty, Words and Buildings, 286.</div>
+<div dir="ltr">13. Forty, Words and Buildings, 221.</div>
+<div dir="ltr">14. Forty, Words and Buildings, 312.</div>
