--- a/_posts/2021-12-09-zsgah.html
+++ b/_posts/2021-12-09-zsgah.html
@@ -3,7 +3,7 @@ title: "آغازی برای پایان یک رویکرد پراشتباه"
 authors: فربد افشار بکشلو 
 types: blog 
 tags: حفاظت میراث فرهنگی ,حفاظت بافت تاریخی شیراز,میراث فرهنگی ایران,میراث فرهنگی شیراز,منطق اجتماعی فضای شهری بافت تاریخی,نظریه چیدمان فضا,توسعه حرم شاهچراغ,طرح توسعه شاهچراغ,شاه‌چراغ,شاهچراغ,شیراز,پهلوی,جمهوری اسلامی,کیوان کریمی 
-featured: false
+featured: true
 slug: zsgah 
 --- 
 <p style="text-align: justify;">مطرح شدن مجدد طرح توسعه ی حرم شاه چراغ (ع) سبب بروز نگرانی شدید در جامعهٔ معماری و شهرسازی ایران شده است.&nbsp; افراد از دریچه&zwnj;های متفاوتی این نگرانی را مطرح کرده&zwnj;اند، ولی جای یک نگاه خالی بود: منطق اجتماعی فضای شهری بافت موجود و عواقب این مداخله برای آن. بر مبنای نظریهٔ چیدمان فضا، فعالیت میرا ترین عنصر شهری است و بسیار سریع&zwnj;تر از دو عنصر دیگر شهری، یعنی ساختمان و معبر، دچار دگرگونی می شود. در مقابل، معبر نامیراترین عنصر شهری است و خطی است که برای زمانی طولانی بر پیکر شهر باقی می&zwnj;ماند. بر مبنای پژوهش&zwnj;های متعددی که بر اساس الگوی برآمده از این نظریه صورت گرفته است، تخریب هر بافت نه تنها سبب از بین رفتن ابنیه می&zwnj;شود بلکه سبب تغییر وسیعی در ساختار شبکهٔ خیابانی آن محدوده نیز می شود. تغییراتی که برای مدتی طولانی در ساختار شهر مورد نظر باقی خواهند ماند، اصلاح آن امر ساده ای نبوده و نسل&zwnj;ها طول می کشد تا بتوان این اختلال را در شبکهٔ معابر یک شهر سامان داد. اما، در معماری و شهرسازی معاصر ایران کاملاً در جهت عکس این اندیشه عمل شده است. سرزندگی فضای شهری با کاربری (فعالیت) های آن تعریف شده و فضا به عنوان پس&zwnj;زمینه در نظر گرفته می شود. این ارزیابی اشتباه از فضای شهری منجر به شکست طیف وسیعی از پروژه&zwnj;های شهرسازی پس از ۱۳۰۹ در ایران شده است. مداخلات در بافت کهن شهرهای ایران در دوران پهلوی تا طرح&zwnj;های توسعهٔ اماکن متبرکه در دوران متاخر نمونه های برجسته ای از این ناکامی می&zwnj;باشند.&nbsp;</p>
