--- a/_posts/2022-01-10-uSntp.html
+++ b/_posts/2022-01-10-uSntp.html
@@ -2,7 +2,7 @@
 title: "مزار بکتاش آبتین و امامزاده عبدالله" 
 authors: فرزاد زره‌داران 
 types: blog 
-featured: false
+featured: true
 featureImg: "/assets/img/posts/uSntp.jpg" 
 slug: uSntp 
 gallery: 
