--- a/_posts/2022-02-13-sBGAa.html
+++ b/_posts/2022-02-13-sBGAa.html
@@ -3,8 +3,11 @@ title: "دانشگاه شهید چمران اهواز؛ ردپایی از سنت
 authors: وحید آقایی 
 types: blog 
 featured: true
+featureImg: "/assets/img/posts/sBGAa.jpg" 
 slug: sBGAa 
 gallery: 
+- image_path: "/assets/img/posts/sBGAa.jpg" 
+  title: "دانشگاه شهید چمران اهواز؛ ردپایی از سنت‌گرایی در معماری ایرانی" 
 - image_path: "/assets/img/posts/sBGAa-1.jpg" 
   title: "نمایی از بام سالن مرکزی دانشکده کشاورزی دانشگاه شهید چمران اهواز (دانشگاه جندی‌شاپور قدیم) اثر محمدرضا مقتدر از شرکت مهندسان مشاور مدام منبع: آرشیو روابط عمومی دانشگاه شهید چمران اهواز " 
  
