--- a/_posts/2020-05-05-EaYqF.html
+++ b/_posts/2020-05-05-EaYqF.html
@@ -1,6 +1,6 @@
 --- 
 title: "همه‌گیری جهانی کرونا، ریچارد فاینمن و آیندۀ معماری" 
-authors: asmaneh 
+authors: smohseni 
 types: blog 
 featured: false
 featureImg: "/assets/img/posts/EaYqF.jpg" 
