--- a/_posts/2022-04-01-P6qWD.html
+++ b/_posts/2022-04-01-P6qWD.html
@@ -1,20 +1,4 @@
 --- 
-title: "پژوهش و منابعِ تاریخ هنر اسلامی؛ میزگرد مجازی" 
-authors: asmaneh 
-types: news 
-tags: منابع تاریخ هنر اسلامی,انجمن مورخان هنر اسلامی 
-featured: false
-featureImg: "/assets/img/posts/P6qWD.jpg" 
-slug: P6qWD 
-gallery: 
-- image_path: "/assets/img/posts/P6qWD.jpg" 
-  title: "پژوهش و منابعِ تاریخ هنر اسلامی؛ میزگرد مجازی" 
- 
+published: false 
 --- 
-<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff; text-align: right;">سخنرانان در این میزگرد دربارۀ چگونگی ایجاد روش&zwnj;های تحقیق کارآمد بحث می&zwnj;کنند و هم&zwnj;چنین می&zwnj;کاوند که چگونه می&zwnj;شود به بهترین نحو، از منابعی مرتبط هم&zwnj;چون گنجینه&zwnj;های اسناد، موزه&zwnj;ها و کتابخانه&zwnj;ها استفاده کرد. در پایان این میزگرد جلسۀ پرسش و پاسخ برگزار خواهد شد.</p>
-<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff; text-align: right;">- سخنرانان: جیک بنسون، مارتینا روجیادی، آماندا هنوش استاینبرگ</p>
-<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff; text-align: right;">- میزبان:&nbsp; انجمن مورخان هنر اسلامی (HIAA)</p>
-<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff; text-align: right;">- زمان: ۸ آوریل ۲۰۲۲| ۱۹ فروردین ۱۴۰۱</p>
-<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff; text-align: right;">- اطلاعات بیشتر:</p>
-<p dir="ltr" style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff; text-align: right;"><a style="box-sizing: border-box; color: #0645ad; background-color: transparent; line-height: 1.6; text-decoration-line: none !important;" href="https://www.historiansofislamicart.org/events-and-symposia/symposia/HIAA-Panel-Research-and-Resources-in-Islamic-Art-History-2022-04-08.html" target="_blank" rel="noopener">https://www.historiansofislamicart.org/events-and-symposia/symposia/HIAA-Panel-Research-and-Resources-in-Islamic-Art-History-2022-04-08.html</a></p>
-<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1rem; color: #212529; font-family: Calibri, Arial; font-size: 16px; background-color: #ffffff; text-align: right;">- ثبت&zwnj;نام در این میزگرد:&nbsp;<a style="box-sizing: border-box; color: #0645ad; background-color: transparent; line-height: 1.6; text-decoration-line: none !important;" href="https://mit.zoom.us/meeting/register/tJAtcuytqDIqHtfqAWGmAF_YdnlaaxcxGZ7L" target="_blank" rel="noopener">https://mit.zoom.us/meeting/register/tJAtcuytqDIqHtfqAWGmAF_YdnlaaxcxGZ7L</a></p>
+  
