--- a/_posts/2022-05-06-BHukh.html
+++ b/_posts/2022-05-06-BHukh.html
@@ -1,5 +1,5 @@
 --- 
-title: "" 
+title: "یافته‌هایی نو در باب هویت شهری اهواز (2): سیمای آغازین بندر ناصری" 
 authors: r.mojtahedzadeh 
 types:  
 featured: false
