--- a/_posts/2022-05-06-XXrbH.html
+++ b/_posts/2022-05-06-XXrbH.html
@@ -3,8 +3,11 @@ title: "یافته‌هایی نو در باب هویت شهری اهواز (2):
 authors: r.mojtahedzadeh 
 types: blog 
 featured: false
+featureImg: "/assets/img/posts/XXrbH.jpg" 
 slug: XXrbH 
 gallery: 
+- image_path: "/assets/img/posts/XXrbH.jpg" 
+  title: "یافته‌هایی نو در باب هویت شهری اهواز (2): سیمای آغازین بندر ناصری" 
 - image_path: "/assets/img/posts/XXrbH-1.jpg" 
   title: "پلان کارون در محدوده اهواز و ناصری؛ 1907" 
 - image_path: "/assets/img/posts/XXrbH-2.jpg" 
