--- a/_posts/2020-04-01-vqDPD.html
+++ b/_posts/2020-04-01-vqDPD.html
@@ -1,8 +1,4 @@
 --- 
-title: "«فاصله»‌ای که همۀ «رابطه»ها را نجات می‌دهد" 
-authors: badri 
-types: blog 
-tags: فضای باز,فضای عمومی,کرونا,فاصله 
-featured: false
-slug: vqDPD 
+published: false 
 --- 
+  
