--- a/_posts/2022-08-08-Xcxw8.html
+++ b/_posts/2022-08-08-Xcxw8.html
@@ -10,7 +10,9 @@ gallery:
 - image_path: "/assets/img/posts/Xcxw8.jpg" 
   title: "مکانِ غیرمکان‌مند؛ پارادوکسی به مبهمی آینده!" 
 - image_path: "/assets/img/posts/Xcxw8-1.jpg" 
-  title: "نمایشگاه آثار ون‌گوگ در ونکوور ۲۰۲۱؛ اجزا معماری به مثابه پرده‌ای برای نمایش.(Imagine-vangogh.com" 
+  title: "پلازا الوصل در اکسپو دبی ۲۰۲۰(۲۰۲۲)؛ اجزا معماری زمینه‌ای برای نمایش. (Digitalmagazine.com)" 
+- image_path: "/assets/img/posts/Xcxw8-2.jpg" 
+  title: "نمایشگاه آثار ون‌گوگ در ونکوور ۲۰۲۱؛ اجزا معماری به مثابه پرده‌ای برای نمایش.(Imagine-vangogh.com)" 
  
 excerpt: "امروزه گرایش‌های موجود در فضای آکادمیک رشتهٔ معماری و افزون بر آن، حوزهٔ فعالیت حرفه‌ای معماران، آنچنان گسترهٔ عظیمی از علوم را شامل می‌شود که به نظر می‌رسد پاره‌ای از آن‌ها قرابت چندانی با یکدیگر ندارند. " 
 --- 
