--- a/_posts/2022-08-10-gYA8H.html
+++ b/_posts/2022-08-10-gYA8H.html
@@ -2,7 +2,7 @@
 title: "یافته‌هایی نو درباب هویت شهری اهواز (۳): بنیادهای فرنگی در ناصری (اهواز نوین): کمپانی کشتیرانی لینچ" 
 authors: r.mojtahedzadeh 
 types: blog 
-featured: false
+featured: true
 featureImg: "/assets/img/posts/gYA8H.jpg" 
 slug: gYA8H 
 gallery: 
