fix user profile update

--- a/user.html
+++ b/user.html
@@ -106,6 +106,7 @@ access: users
   $('.uploadImg').show();
   $('.uploadedImg').hide();
   $('#imgUrl').val('');
+  $('#imgPrv').attr('href', '');
   })
   $(document).ready(function () {
     $('#userConfirmNewPassword').on('keyup', function () {
