--- a/_posts/2023-05-30-G4Wsf.html
+++ b/_posts/2023-05-30-G4Wsf.html
@@ -1,42 +1,4 @@
 --- 
-title: "بنیاد‌های فهم تاریخ معماری: درس‌نامه‌ای میان‌رشته‌ای | مهرداد قیومی بید‌هندی" 
-authors: asmaneh 
-types: bap 
-categories: asmaneBooks 
-tags: مهرداد قیومی,مهرداد قیومی بیدهندی,قیومی,تاریخ معماری,فهم تاریخ معماری,درس‌نامه,کتاب تاریخ معماری,پژوهش معماری,پژوهش تاریخ معماری,فهم معمای 
-featured: true
-featureImg: "/assets/img/posts/G4Wsf.jpg" 
-slug: G4Wsf 
-gallery: 
-- image_path: "/assets/img/posts/G4Wsf.jpg" 
-  title: "بنیاد‌های فهم تاریخ معماری: درس‌نامه‌ای میان‌رشته‌ای | مهرداد قیومی بید‌هندی" 
- 
-excerpt: "هدف اصلی کتاب این است که دانشجو و پژوهشگر جوان با لازمه‌های اصلی فهم تاریخ معماری، و بایسته‌های فهم معماری، آشنا شود." 
+published: false 
 --- 
-<p>هدف اصلی کتاب این است که دانشجو و پژوهشگر جوان با &rlm;لازمه&zwnj;های اصلی فهم تاریخ معماری، و بایسته&zwnj;های فهم معماری، آشنا شود. &rlm;هدف این نیست که مجموعه&zwnj;ای از نظریه&zwnj;ها و روش&zwnj;ها و اصطلاحات و &zwnj;&rlm;نام&zwnj;های اشخاص را بر سر خواننده آوار کنیم و او را بار دیگر در میان غباری &rlm;غلیظ از اندیشه&zwnj;های نیندیشیده سرگشته &rlm;کنیم؛ بلکه برعکس، هدف این است &rlm;که در فضای آشفته&zwnj;ی اندیشه و تاریخ معماری، سررشته&zwnj;ای به&zwnj;دست او بدهیم &rlm;تا خود پیش برود؛ تا خود بتواند &rlm;درباره&zwnj;ی معماری و تاریخ آن فکر کند، بپرسد، &rlm;و تحقیق کند. هدف این است که با مفاهیم و موضوعاتی آشنا شود که &rlm;بتواند &rlm;با تکیه بر آنها درباره&zwnj;ی معماری و تاریخ آن بیندیشد.&rlm;</p>
-<p>&nbsp;</p>
-<p><strong>فهرست مطالب کتاب:</strong></p>
-<p>مقدمه</p>
-<p>بخش اول: درباره&zwnj;ی معماری گذشته</p>
-<p>- فصل ۱. دلالت&zwnj;ها و نیروها در معماری</p>
-<p>- فصل ۲. زمان و گذشته</p>
-<p>- فصل ۳. اندیشه و سخن درباره&zwnj;ی معماری گذشته (۱)</p>
-<p>فصل ۴. اندیشه و سخن درباره&zwnj;ی معماری گذشته (۲)</p>
-<p>بخش دوم: فرهنگ و معرفت و معماری</p>
-<p>- فصل ۵. مفهوم معماری در طی زمان</p>
-<p>- فصل ۶. تاریخ، معرفت تاریخی، و معماری</p>
-<p>- فصل ۷. سنت، فرهنگ، معماری</p>
-<p>- فصل ۸. معرفتِ معماری و فرهنگ ساخت&zwnj;وساز</p>
-<p>بخش سوم: تاریخ معماری، چیستی و ابزارها</p>
-<p>- فصل ۹. تاریخ معماری: چیستی</p>
-<p>- فصل ۱۰ . تاریخ معماری: انواع</p>
-<p>- فصل ۱۱. تاریخ معماری: طبقه&zwnj;بندی (۱)</p>
-<p>- فصل ۱۲. تاریخ معماری: طبقه&zwnj;بندی (۲)</p>
-<p>حرف اول: نگاهی به فایده و مخاطب تاریخ معماری</p>
-<p>فهرست منابع</p>
-<p>نمایه&zwnj;ی اَعلام</p>
-<p>نمایه&zwnj;ی مفاهیم و اصطلاحات</p>
-<p><strong>مشخصات کتاب:</strong></p>
-<p>قیومی بیدهندی، مهرداد. بنیادهای فهم تاریخ معماری: درس&zwnj;نامه&zwnj;ای میان&zwnj;رشته&zwnj;ای. تهران: فرهنگستان هنر، ۱۴۰۲.</p>
-<p><strong>اطلاعات بیشتر:</strong></p>
-<p dir="ltr"><a title="بنیاد&zwnj;های فهم تاریخ معماری" href="https://matnpub.ir/" target="_blank" rel="noopener">https://matnpub.ir/</a></p>
+  
