--- a/_posts/2023-05-30-hKXRn.html
+++ b/_posts/2023-05-30-hKXRn.html
@@ -1,5 +1,5 @@
 --- 
-title: "بنیاد‌های فهم تاریخ معماری: درس‌نامه‌ای میان‌رشته‌ای | مهرداد قیومی بیدهندی" 
+title: "بنیاد‌های فهم تاریخ معماری: درس‌نامه‌ای میان‌رشته‌ای" 
 authors: qayyoomi 
 types: bap 
 categories: asmaneBooks 
@@ -9,9 +9,8 @@ featureImg: "/assets/img/posts/hKXRn.jpg"
 slug: hKXRn 
 gallery: 
 - image_path: "/assets/img/posts/hKXRn.jpg" 
-  title: "بنیاد‌های فهم تاریخ معماری: درس‌نامه‌ای میان‌رشته‌ای | مهرداد قیومی بیدهندی" 
+  title: "بنیاد‌های فهم تاریخ معماری: درس‌نامه‌ای میان‌رشته‌ای" 
  
-excerpt: "هدف اصلی کتاب این است که دانشجو و پژوهشگر جوان با ‏لازمه‌های اصلی فهم تاریخ معماری، و بایسته‌های فهم معماری، آشنا شود. ‏" 
 --- 
 <p style="text-align: justify;">هدف اصلی کتاب این است که دانشجو و پژوهشگر جوان با &rlm;لازمه&zwnj;های اصلی فهم تاریخ معماری، و بایسته&zwnj;های فهم معماری، آشنا شود. &rlm;هدف این نیست که مجموعه&zwnj;ای از نظریه&zwnj;ها و روش&zwnj;ها و اصطلاحات و &zwnj;&rlm;نام&zwnj;های اشخاص را بر سر خواننده آوار کنیم و او را بار دیگر در میان غباری &rlm;غلیظ از اندیشه&zwnj;های نیندیشیده سرگشته &rlm;کنیم؛ بلکه برعکس، هدف این است &rlm;که در فضای آشفته&zwnj;ی اندیشه و تاریخ معماری، سررشته&zwnj;ای به&zwnj;دست او بدهیم &rlm;تا خود پیش برود؛ تا خود بتواند &rlm;درباره&zwnj;ی معماری و تاریخ آن فکر کند، بپرسد، &rlm;و تحقیق کند. هدف این است که با مفاهیم و موضوعاتی آشنا شود که &rlm;بتواند &rlm;با تکیه بر آنها درباره&zwnj;ی معماری و تاریخ آن بیندیشد.&rlm;</p>
 <p>&nbsp;</p>
