--- a/_posts/2017-08-16-dX29.html
+++ b/_posts/2017-08-16-dX29.html
@@ -1,8 +1,11 @@
 --- 
-title: "مفهوم تاریخ و مورخ در تفکر ایرانی" 
-authors: mrahimzadeh 
-types: "voices" 
-slug: "dX29" 
+title: "مفهوم تاریخ و مورخ در تفکر ایرانی | محمد‌رضا رحیم‌زاده" 
+authors: asmaneh 
+types: voices 
+tags: مورخ,تاریخ,محمد‌رضا رحیم‌زاده,مطالعات معماری ایران,معماری,تاریخ معماری,مفهوم تاریخ,مفهوم مورخ,آسمانه 
+featured: false
+slug: dX29 
 embedCode: '<div id="71180217751"><script type="text/JavaScript" src="https://www.aparat.com/embed/yYCmH?data[rnddiv]=71180217751&data[responsive]=yes"></script></div>'
+excerpt: "تهران: دانشگاه شهید بهشتی، ۱۳۹۱" 
 --- 
-تهران، دانشگاه شهید بهشتی، ۱۳۹۱.
+<p>تهران: دانشگاه شهید بهشتی، ۱۳۹۱.</p>
