--- a/_posts/2023-06-20-nGxji.html
+++ b/_posts/2023-06-20-nGxji.html
@@ -10,7 +10,7 @@ gallery:
 - image_path: "/assets/img/posts/nGxji.jpg" 
   title: "برگزاری جلسات مجازی معرفی و گفتگو دربارۀ پژوهش‌های دکتری در رشته‌های تاریخ و نظریۀ معماری، تاریخ منظر و تاریخ شهر" 
  
-excerpt: "دانشگاه ای.اچ.تی زوریخ جلساتی مجازی برای معرفی و گفتگو دربارۀ پژوهش‌های دکتری در زمینۀ تاریخ و نظریۀ معماری، تاریخ منظر و تاریخ شهر برگزار می‌کند." 
+excerpt: "دانشگاه ای.تی.اچ زوریخ جلساتی مجازی برای معرفی و گفتگو دربارۀ پژوهش‌های دکتری در زمینۀ تاریخ و نظریۀ معماری، تاریخ منظر و تاریخ شهر برگزار می‌کند." 
 --- 
 <p><strong>فهرست جلسات:</strong></p>
 <p>۲۰ ژوئن ۲۰۲۳| ۳۰ خرداد ۱۴۰۲:</p>
