--- a/_posts/2023-06-22-8G2f4.html
+++ b/_posts/2023-06-22-8G2f4.html
@@ -1,6 +1,6 @@
 --- 
-title: "پرتوی بر اهواز کهن از خلال متون ساسانی و اسلامی و حدسی در باب مکان رام‌اردشیر ساسانی | روح‌الله مجتهد‌زاده" 
-authors: asmaneh 
+title: "پرتوی بر اهواز کهن از خلال متون ساسانی و اسلامی و حدسی در باب مکان رام‌اردشیر ساسانی" 
+authors: r.mojtahedzadeh 
 types: bap 
 categories: articles 
 tags: روح‌الله مجتهد‌زاده,اهواز,تاریخ اهواز,تاریخ شهر اهواز,اهواز کهن,متون ساسانی,متون اسلامی,متون حدسی,رام‌اردشیر,رام‌اردشیر ساسانی,مکان رام‌اردشیر,آسمانه,مقاله,مطالعات معماری ایران 
