--- a/_posts/2023-06-21-fKWB4.html
+++ b/_posts/2023-06-21-fKWB4.html
@@ -2,9 +2,12 @@
 title: "یافته‌هایی نو درباب هویت شهری اهواز (۵): بنیادهای فرنگی در ناصری (اهواز نوین): باغ رِچی" 
 authors: r.mojtahedzadeh 
 types: blog 
-featured: false
+featured: true
+featureImg: "/assets/img/posts/fKWB4.jpg" 
 slug: fKWB4 
 gallery: 
+- image_path: "/assets/img/posts/fKWB4.jpg" 
+  title: "یافته‌هایی نو درباب هویت شهری اهواز (۵): بنیادهای فرنگی در ناصری (اهواز نوین): باغ رِچی" 
 - image_path: "/assets/img/posts/fKWB4-1.jpeg" 
   title: "تصویر ۱- نقشه اهواز، ناصری و پل جدید، ۱۹۳۸ (۱۳۱۷ ش.)" 
 - image_path: "/assets/img/posts/fKWB4-2.png" 
