--- a/_posts/2016-08-22-qCFab.html
+++ b/_posts/2016-08-22-qCFab.html
@@ -4,7 +4,12 @@ authors: hashemi.mitra
 types: blog 
 tags: آبادانی,میترا هاشمی,آسمانه,مطالعات معماری ایران,تاریخ معماری,جنگ جهانی دوم,برلین 
 featured: false
+featureImg: "/assets/img/posts/qCFab.jpg" 
 slug: qCFab 
+gallery: 
+- image_path: "/assets/img/posts/qCFab.jpg" 
+  title: "آبادانی ویرانه‌ها ۱" 
+ 
 excerpt: "عظیم‌ترین شهرهای امروز اروپا همچون برلین و لندن در پایان جنگ جهانی دوم، یعنی حدود هفتاد سال پیش، ویرانه‌ای بیش نبود. آبادانی دوبارۀ این شهرها در این مدت کوتاه، به رغم پیامدهای اقتصادی، اجتماعی، فرهنگی، و زیست‌محیطی ناخوشایند جنگ، شگفت‌انگیز است." 
 --- 
 <div>
@@ -22,4 +27,11 @@ excerpt: "عظیم‌ترین شهرهای امروز اروپا همچون بر
 <p style="text-align: justify;">[ادامه دارد.]</p>
 </div>
 </div>
-<div style="text-align: justify;">۱. تصویر نمایی از شهر برلین در پایان جنگ جهانی دوم است.</div>
+<ul>
+<li>
+<div style="text-align: justify;">۱.</div>
+<div>
+<p style="text-align: justify;">تصویر نمایی از شهر برلین در پایان جنگ جهانی دوم است.</p>
+</div>
+</li>
+</ul>
