--- a/_posts/2023-07-21-btkQk.html
+++ b/_posts/2023-07-21-btkQk.html
@@ -1,5 +1,5 @@
 --- 
-title: "در باب آرامگاه شهدای ۳۰ تیر در ابن بابویه" 
+title: "آرامگاه شهدای ۳۰ تیر" 
 authors: مریم ابراهیمی 
 types: blog 
 tags: ۳۰ تیر,محمد مصدق,آرامگاه شهدای ۳۰ تیر,ابن بابویه,تاریخ معاصر ایران,مکان حافظه,جبهه ملی ایران 
@@ -8,9 +8,9 @@ featureImg: "/assets/img/posts/btkQk.jpg"
 slug: btkQk 
 gallery: 
 - image_path: "/assets/img/posts/btkQk.jpg" 
-  title: "در باب آرامگاه شهدای ۳۰ تیر در ابن بابویه" 
+  title: "آرامگاه شهدای ۳۰ تیر" 
  
-excerpt: "تا زمانی که واقعۀ ۳۰ تیر برای جبهه ملی موضوعیت داشت، افرادی که حتی شاهد آن واقعه نبودند و در آن شرکت نداشتند، ابن‌بابویه را مکان حافظه جبهه ملی می‌دانستند و با حضور در آن واقعۀ ۳۰ تیر را به یاد می‌آوردند و با محافظت از این مکان از حافظۀ جمعی متصل به آن پاسداری می‌شد. برپایی یادمان سنگی و مزار خالی محمد مصدق در کنار مزار شهدا در سال ۱۳۵۸ نشانی از این کوشش است؛ امّا پس از تغییر ساختار سیاسی این گروه دیگر قدرت چندانی نداشت و یادمان بیش از چند روز عمر نکرد و به دست مخالفان مصدق تخریب شد." 
+excerpt: "تا زمانی که واقعۀ ۳۰ تیر برای جبهه ملی موضوعیت داشت، افرادی که حتی شاهد آن واقعه نبودند، ابن‌بابویه را مکان حافظه جبهه ملی می‌دانستند و با حضور در آن واقعۀ ۳۰ تیر را به یاد می‌آوردند و با محافظت از این مکان از حافظۀ جمعی متصل به آن پاسداری می‌شد. برپایی یادمان سنگی و مزار خالی محمد مصدق در کنار مزار شهدا در سال ۱۳۵۸ نشانی از این کوشش است؛ امّا پس از تغییر ساختار سیاسی این گروه دیگر قدرت چندانی نداشت و یادمان بیش از چند روز عمر نکرد و به دست مخالفان مصدق خراب شد." 
 --- 
 <p dir="RTL" style="text-align: justify;"><span lang="FA">یک سال و چند ماه از</span> <span lang="FA">به ثمر نشستن نهضت ملی صنعت نفت نگذشته بود که اختلافی جدی میان محمد مصدق و محمدرضا پهلوی بر سر اختیارات نخست وزیر پیدا شد. نتیجه این اختلافات استعفای مصدق در ۲۵ تیرماه ۱۳۳۱ و نخست وزیری احمد قوام&zwnj;السلطنه در ۲۷ تیر بود. از همان روز استعفای مصدق، جبهه ملی با صدور بیانیه&zwnj;هایی از مردم خواست که از او حمایت کنند. سیدابوالقاسم کاشانی هم در روزهای ۲۸و ۲۹ تیره ماه با انتشار اعلامیه&zwnj;هایی از مردم خواست تا علیه نخست وزیری قوام به پا خیزند. بنابراین</span> <span lang="FA">در روز ۳۰ تیر ۱۳۳۱ مردم با راهپیمایی در خیابان&zwnj;ها خواستار برکناری احمد قوام&zwnj;السلطنه و بازگشت محمد مصدق شدند. سرانجامِ این راهپیمایی کشتار گروهی از مردم بود که به استعفای قوام و بازگشت محمد مصدق به سمت نخست وزیری منجر شد. حالا مصدق سیاستمداری بود که هوادارانش برای قدرت سیاسی او از جان خود گذشته بودند.</span></p>
 <p dir="RTL" style="text-align: justify;"><span lang="FA">پس از کشتار مردم در این واقعه، قرار شد که کلیۀ اجساد شهدا در نقطه&zwnj;ای از شهر (ابن&zwnj;بابویه یا پارک شهر) مدفون شوند و بر مزار آنها بقعه&zwnj;ای بنا کنند. [۱] اما پس از ساعاتی اعلام شد که کاشانی </span><span lang="AR-SA">۸۰ مترمربع از اراضی ابن</span><span lang="FA">&zwnj;</span><span lang="AR-SA">بابویه را خریداری کرد</span><span lang="FA">ه</span><span lang="AR-SA"> و</span><span lang="FA"> قرار شده است تا</span><span lang="AR-SA"> جنازۀ شهدا در آنجا مدفون </span><span lang="FA">شو</span><span lang="AR-SA">ند [۲] </span><span lang="FA">(گرچه در سال&zwnj;های بعد با جدایی راه کاشانی و مصدق ادعا شد که مصدق این زمین را خریده بود). پس مردم اجساد شهدا را در روز ۳۱ تیرماه پس از آن که یک روز رو&zwnj;به&zwnj;روی مسجد سپهسالار قرار گرفته بودند به ابن&zwnj;بابویه منتقل کردند، جایی که آن را در ابتدا گورستان شهدای وطن نامیدند. [۳] بنابراین جبهه ملی و اعضای آن از آغاز در پی گره زدن نام خود به نام این شهدا با ساختن زیارتگاهی برای آنها بودند؛ چراکه شهادت آنها به این گروه اعتبار می&zwnj;بخشید و ساختن زیارتگاه برای شهدا به حفظ یاد واقعۀ ۳۰ تیر در حمایت مردم از مصدق و اهداف و آرمان&zwnj;های جبهه ملی کمک می&zwnj;کرد. </span></p>
