--- a/_posts/2017-01-31-WYVNZ.html
+++ b/_posts/2017-01-31-WYVNZ.html
@@ -10,7 +10,7 @@ gallery:
 - image_path: "/assets/img/posts/WYVNZ.jpg" 
   title: "زندگی در میان دود‌کش‌های بدون دود: مرثیه‌ای برای حادثۀ غمبار ساختمان پلاسکو" 
 - image_path: "undefined" 
-  title: "زندگی در میان دود‌کش‌های بدون دود: مرثیه‌ای برای حادثۀ غمبار ساختمان پلاسکو" 
+  title: "" 
  
 excerpt: "بی‌تدبیری و بی مسئولیتی مسئولین درست، سهل‌انگاری و حرص مالکان هم قبول، اینکه آتش نشانان فداکار، این فرزندان عزیز و مظلوم این خاک، نزد پروردگارشان مأجورند هم حقیقتیست ابدی و دِینیست همیشگی بر ما و تاریخ ما. اما در این ساعات، مسأله‌ دیگری هم  مدام در گوش من زنگ می‌زند. اینکه ریشه‌های وقوع این مصیبت را باید در کجا جستجو کرد؟ عامل اصلی این حادثه چیست؟" 
 --- 
