--- a/_posts/2023-11-13-FZisX.html
+++ b/_posts/2023-11-13-FZisX.html
@@ -5,8 +5,11 @@ types: blog
 categories: rahnama 
 tags: تاریخ مفهومی,راینهارت کوزلک,أندرس هسینگ,Andres Hassing,What Is Conceptual History,Reinhart Koselleck 
 featured: false
+featureImg: "/assets/img/posts/FZisX.png" 
 slug: FZisX 
 gallery: 
+- image_path: "/assets/img/posts/FZisX.png" 
+  title: "تاریخ مفهومی چیست؟" 
 - image_path: "/assets/img/posts/FZisX-1.png" 
   title: "" 
  
