--- a/_posts/2023-11-13-FZisX.html
+++ b/_posts/2023-11-13-FZisX.html
@@ -10,10 +10,8 @@ slug: FZisX
 gallery: 
 - image_path: "/assets/img/posts/FZisX.png" 
   title: "تاریخ مفهومی چیست؟" 
-- image_path: "undefined" 
-  title: "" 
- 
-excerpt: "<p class="MsoNormal" dir="RTL" style="margin: 0cm 0cm 8pt; line-height: 13.5pt; font-family: Calibri, sans-serif; text-align: justify; direction: rtl; unicode-bidi: embed;"><strong><span lang="FA" style="font-size: 13pt; font-family: Arial, sans-serif; color: #333333;">تاریخ مفهومی چیست؟</span></strong></p>
+---
+<p class="MsoNormal" dir="RTL" style="margin: 0cm 0cm 8pt; line-height: 13.5pt; font-family: Calibri, sans-serif; text-align: justify; direction: rtl; unicode-bidi: embed;"><strong><span lang="FA" style="font-size: 13pt; font-family: Arial, sans-serif; color: #333333;">تاریخ مفهومی چیست؟</span></strong></p>
 <p class="MsoNormal" dir="RTL" style="margin: 0cm 0cm 8pt; line-height: 13.5pt; font-family: Calibri, sans-serif; text-align: justify; direction: rtl; unicode-bidi: embed;"><span lang="FA" style="font-size: 13pt; font-family: Arial, sans-serif; color: #333333;">نوشتۀ آندرس هسینگ، ترجمۀ محمدمهدی طاهری</span></p>
 <p class="MsoNormal" dir="RTL" style="margin: 0cm 0cm 8pt; line-height: 13.5pt; font-family: Calibri, sans-serif; text-align: justify; direction: rtl; unicode-bidi: embed;"> </p>
 <p class="MsoNormal" dir="RTL" style="margin: 0cm 0cm 8pt; line-height: 13.5pt; font-family: Calibri, sans-serif; text-align: justify; direction: rtl; unicode-bidi: embed;"><span lang="FA" style="font-size: 13pt; font-family: Arial, sans-serif;">ریشۀ واژۀ «</span><span dir="LTR" lang="EN-US" style="font-size: 13pt; font-family: Arial, sans-serif;">school</span><span lang="FA" style="font-size: 13pt; font-family: Arial, sans-serif;">» (مدرسه)، واژۀ یونانی «</span><span dir="LTR" lang="EN-US" style="font-size: 13pt; font-family: Arial, sans-serif;">schola</span><span lang="FA" style="font-size: 13pt; font-family: Arial, sans-serif;">» است و «</span><span dir="LTR" lang="EN-US" style="font-size: 13pt; font-family: Arial, sans-serif;">schola</span><span lang="FA" style="font-size: 13pt; font-family: Arial, sans-serif;">» در یونانی به‌معنای «اوقات فراغت» بوده است: معنای اولیۀ «</span><span dir="LTR" lang="EN-US" style="font-size: 13pt; font-family: Arial, sans-serif;">school</span><span lang="FA" style="font-size: 13pt; font-family: Arial, sans-serif;">»، اوقات فراغت است. این موضوع به ما دربارۀ نظام آموزشی امروزی چه می‌گوید؟ لابد بیشتر دانش‌آموزان قبول دارند که چیز زیادی نمی‌گوید! اما تفاوت بین معانی این دو اصطلاح، گویای تفاوت‌های جامعۀ ما و جامعۀ یونانیان باستان است.</span></p>
