--- a/_posts/2023-11-16-hRsDf.html
+++ b/_posts/2023-11-16-hRsDf.html
@@ -4,13 +4,8 @@ authors: mirnezami
 types: blog 
 featured: true
 slug: hRsDf 
-gallery: 
-- image_path: "undefined" 
-  title: "" 
-- image_path: "undefined" 
-  title: "" 
- 
-excerpt: "<p dir="RTL"><span lang="FA"><strong>از نقش چینیانه تا تاریخ معماریانه</strong></span></p>
+ ---
+ <p dir="RTL"><span lang="FA"><strong>از نقش چینیانه تا تاریخ معماریانه</strong></span></p>
 <p dir="RTL"><em><span lang="FA"> *</span></em>در پانزده شهریور ۱۴۰۱ نوشتهٔ زیر را برای انتشار به گردانندگان محترم کانال آسمانه فرستادم‌. بنابر ملاحظاتی قرار شد اندکی برای انتشارش صبر کنیم که از قضای روزگار، رخدادهای متعاقبْ موجبِ توقف موقت فعالیت‌های کانال آسمانه شد. بعد از گذشت بیش از یک سال دست‌اندرکاران محترم کانال تصمیم گرفتند این متن را برای انتشار در آسمانه آماده کنند. امیدوارم که خواندنش بتواند نکاتی را دربارهٔ معضلات رویکرد «خاستگاه‌جو» و اهمیت جسارت مترجمان در جعل معادل‌های بی‌سابقه روشن کند. </p>
 <p dir="RTL"><em><span lang="AR-SA">در و دیوار و بوم و آستانه </span></em></p>
 <p dir="RTL"><span lang="AR-SA"><em>نگاریده به نقش چینیانه</em></span></p>
