--- a/_posts/2024-03-12-hrXpv.html
+++ b/_posts/2024-03-12-hrXpv.html
@@ -1,15 +1,17 @@
 --- 
-title: "معماری بنفش؛ طراحی در عصر پیوستار مجاز-عینیت | جیمز کرستس، ابراهیم پوستینچی، و وحید وحدت" 
+title: "معماری بنفش؛ طراحی در عصر پیوستار مجاز-عینیت | جیمز کرستس، ابراهیم پوستینچی و وحید وحدت" 
 authors: asmaneh 
 types: bap 
 categories: book 
-tags: معماری بنفش,کتاب,مجاز,عینیت,جیمز کرستس,ابراهیم پوستینچی,وحید وحدت,مجاز-عینیت,آسمانه,مطالعات معماری ایران,دانشگاه شهید بهشتی 
+tags: معماری,بنفش,کتاب,مجاز,عینیت,جیمز,کرستس,ابراهیم,پوستینچی,وحید,وحدت,مجاز-عینیت,آسمانه,مطالعات,ایران,دانشگاه,شهید,بهشتی 
 featured: false
 featureImg: "/assets/img/posts/hrXpv.jpeg" 
 slug: hrXpv 
 gallery: 
 - image_path: "/assets/img/posts/hrXpv.jpeg" 
-  title: "معماری بنفش؛ طراحی در عصر پیوستار مجاز-عینیت | جیمز کرستس، ابراهیم پوستینچی، و وحید وحدت" 
+  title: "معماری بنفش؛ طراحی در عصر پیوستار مجاز-عینیت | جیمز کرستس، ابراهیم پوستینچی و وحید وحدت" 
+- image_path: "undefined" 
+  title: "" 
  
 excerpt: "کتاب معماری بنفش ویراسته‌ی گزیده‌ای از مجموعه مقالات و پروژه‌هایی است که در آنها کیفیت رنگ بنفش، در جایگاه کیفیتی مستقل از دوگانه‌های مفروض، همچون مجازی/عینی، مادی/غیرمادی، به‌واسطه/بی‌واسطه بررسی شده است. بنفش، به این ترتیب، به مثابه‌ی چهارچوبی مفهومی، برای بررسی تأثیرات میانجی‌های فن‌آورانه در بسط سناریوهای محتمل فضایی، از طریق داستان‌سرایی، به کار رفته است." 
 --- 
