--- a/_posts/2024-03-14-JCWEu.html
+++ b/_posts/2024-03-14-JCWEu.html
@@ -5,7 +5,12 @@ types: bap
 categories: book 
 tags: کتاب‌آرایی,یهود,کتاب‌آرایی یهودی,اسلام,مسیحیت,کتاب مقدس,کتاب مقدس عبری,اسپانیا,قرون وسطا,کاترین کگمن اپل,آسمانه,مطالعات معماری ایران,دانشگاه شهید بهشتی 
 featured: false
+featureImg: "/assets/img/posts/JCWEu.jpg" 
 slug: JCWEu 
+gallery: 
+- image_path: "/assets/img/posts/JCWEu.jpg" 
+  title: "کتاب‌آرایی یهود در میان اسلام و مسیحیت؛ تزیین کتاب‌های مقدس عبری در اسپانیای قرون‌ وسطا | کاترین کگمن اپل" 
+ 
 excerpt: "کاترین کگمن اپل استاد دانشگاه مطالعات یهود در دانشگاه مانستر در آلمان است و کتاب‌های متعددی درباره‌ی هنر و فرهنگ یهودیان قرون وسطا، به‌خصوص نسخه‌های خطی مصور، نوشته است. نویسنده در این کتاب سعی دارد تا تداوم نقوش در کتاب‌آرایی یهود و منابع الهام هنرمندان یهودی را، در قرون وسطا، بررسی کند. همچنین، تلاش کرده تا تاریخ کتب مقدس مصور یهودیان اسپانیا را گردآوری کند. از این رو، در این کتاب مشخصات مکاتب مختلف هنری بین قرون ۱۳ تا ۱۵م در شبه جزیره‌ی ایبِریا (واقع در جنوب غربی اروپا) را بیان می‌کند." 
 --- 
 <p><span style="box-sizing: inherit; font-family: Roboto, -apple-system, 'apple color emoji', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif; font-size: 16px; white-space-collapse: preserve; background-color: #ffffff;">&laquo;کتاب&zwnj;آرایی یهود در میان اسلام و مسیحیت؛ تزیین کتاب&zwnj;های مقدس عبری در اسپانیای قرون&zwnj; وسطا&raquo;</span><span style="font-family: Roboto, -apple-system, 'apple color emoji', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif; font-size: 16px; white-space-collapse: preserve; background-color: #ffffff;"> کاترین کگمن اپل بریل، ۲۰۰۴ سمیه جلالیان</span></p>
