--- a/_posts/2024-03-19-zPDXc.html
+++ b/_posts/2024-03-19-zPDXc.html
@@ -2,7 +2,7 @@
 title: "غول چراغ نفت و بلعیدن سرزمین خوزستان | امین مقصودی" 
 authors: asmaneh 
 types: blog 
-tags: نفت,خوزستان,تاریخ شهر,امین مقصودی,آسمانه,مطالعات معماری ایران,دانشگاه شهید بهشتی 
+tags: نفت,خوزستان,تاریخ,شهر,امین,مقصودی,آسمانه,مطالعات,معماری,ایران,دانشگاه,شهید,بهشتی 
 featured: false
 slug: zPDXc 
 excerpt: "روز ۲۹ اسفند در تقویم زمانی است که برای ایرانیان بسیار خوشایند است. از یک طرف نزدیک شدن به آغاز سال نو و از طرف دیگر سالگرد ملی شدن نفت و خارج شدن این ثروت ملی از چنگ استعمار بیگانه، این روز را بسیار ویژه نموده است. در چنین روزی در سال ۱۳۲۹ و بعد از مجادله‌های فراوان بین مصدق نخست وزیر وقت و مدیران شرکت نفت پارس-انگلیس، نفت و صنایع وابسته به آن ملی شدند و ایرانیان قادر شدند که کنترل و مدیریت این صنعت سودآور و بزرگ را در دست گیرند." 
