--- a/_posts/2024-04-03-VGaNG.html
+++ b/_posts/2024-04-03-VGaNG.html
@@ -2,8 +2,8 @@
 title: "هنر و تاریخ‌هایش: گزیده‌ی متون | پاره‌ای دیگر از کتاب‌نگاشت توضیحی نظریه‌های تاریخ معماری و هنر" 
 authors: mqayoomi 
 types: blog 
-tags: تاریخ هنر,کتاب‌نگاشت,نظریه تاریخ هنر,نظریه تاریخ معماری,تاریخ معماری,کتاب‌نگاشت توضیحی,مهرداد قیومی,مهرداد قیومی بیدهندی,آسمانه,مطالعات معماری ایران,دانشگاه شهید بهشتی 
-featured: false
+tags: تاریخ,هنر,کتاب‌نگاشت,نظریه,معماری,توضیحی,مهرداد,قیومی,بیدهندی,آسمانه,مطالعات,ایران,دانشگاه,شهید,بهشتی 
+featured: true
 featureImg: "/assets/img/posts/VGaNG.jpg" 
 slug: VGaNG 
 gallery: 
