--- a/_posts/2024-05-04-pcZCD.html
+++ b/_posts/2024-05-04-pcZCD.html
@@ -2,21 +2,19 @@
 title: "گزیده‌ای از نقاشی‌های آبرنگ جوزف دارسی از مناظر اطراف شیراز | معرفی اسناد تصویری" 
 authors: asmaneh 
 types: news 
-tags: نقاشی,آبرنگ,جوزف دارسی,شیراز,منظر,منظر شیراز,سند,اسناد,اسناد تصویری,آسمانه,مطالعات معماری ایران 
+tags: نقاشی,آبرنگ,جوزف,دارسی,شیراز,منظر,سند,اسناد,تصویری,آسمانه,مطالعات,معماری,ایران 
 featured: false
 featureImg: "/assets/img/posts/pcZCD.jpg" 
 slug: pcZCD 
 gallery: 
 - image_path: "/assets/img/posts/pcZCD.jpg" 
   title: "گزیده‌ای از نقاشی‌های آبرنگ جوزف دارسی از مناظر اطراف شیراز | معرفی اسناد تصویری" 
-- image_path: "/assets/img/posts/pcZCD-1.jpg" 
+- image_path: "undefined" 
   title: "" 
-- image_path: "/assets/img/posts/pcZCD-2.jpg" 
+- image_path: "undefined" 
   title: "" 
  
-excerpt: "📜معرفی اسناد تصویری: « گزیده‌ای از نقاشی‌های آبرنگ جوزف دارسی از مناظر اطراف شیراز» 
-
-جوزف دارسی (۱۷۸۰-۱۸۴۸) سرگرد توپ‌خانه‌ی سلطنتی بریتانیا بود که در سال ۱۸۱۱م همراه با سر گور اوزلی به ایران آمد. دارسی و همراهانش، پیش از رسیدن به مقرشان در تبریز، سه ماه در شیراز ماندند و در این مدت، او مشغول گردآوری اطلاعات جغرافیایی و بررسی مکان‌های محلی شد." 
+excerpt: "جوزف دارسی (۱۷۸۰-۱۸۴۸) سرگرد توپ‌خانه‌ی سلطنتی بریتانیا بود که در سال ۱۸۱۱م همراه با سر گور اوزلی به ایران آمد. دارسی و همراهانش، پیش از رسیدن به مقرشان در تبریز، سه ماه در شیراز ماندند و در این مدت، او مشغول گردآوری اطلاعات جغرافیایی و بررسی مکان‌های محلی شد." 
 --- 
 <p>معرفی اسناد تصویری: &laquo; گزیده&zwnj;ای از نقاشی&zwnj;های آبرنگ جوزف دارسی از مناظر اطراف شیراز&raquo;&nbsp;</p>
 <p>&nbsp;</p>
