--- a/_posts/2024-05-08-ggzgg.html
+++ b/_posts/2024-05-08-ggzgg.html
@@ -2,8 +2,8 @@
 title: " آرمان‌ها و بت‌ها: مقالاتی درباره‌ی ارزش در تاریخ و هنر | پاره‌ای دیگر از کتاب‌نگاشت توضیحی نظریه‌های تاریخ معماری و هنر" 
 authors: mqayoomi 
 types: blog 
-tags: آرمان,بت,ارزش,تاریخ هنر,کتاب‌نگاشت,کتاب‌نگاشت توضیحی,نظریه,نظریه تاریخ معماری,نظریه تاریخ هنر,تاریخ معماری,مهرداد قیومی,مهرداد قیومی بیدهندی,آسمانه,مطالعات معماری ایران 
-featured: false
+tags: آرمان,بت,ارزش,تاریخ,هنر,کتاب‌نگاشت,توضیحی,نظریه,معماری,مهرداد,قیومی,بیدهندی,آسمانه,مطالعات,ایران 
+featured: true
 featureImg: "/assets/img/posts/ggzgg.PNG" 
 slug: ggzgg 
 gallery: 
